Major slides update

--- a/data/lit/wipol_advanced.bib
+++ b/data/lit/wipol_advanced.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Matthias Schnetzer at 2023-04-27 00:03:54 +0200 
+%% Created for Matthias Schnetzer at 2023-05-06 20:44:44 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{oecd:2018,
+	author = {{OECD}},
+	date-added = {2023-05-06 20:43:39 +0200},
+	date-modified = {2023-05-06 20:44:37 +0200},
+	doi = {10.1787/9789264301085-en},
+	publisher = {OECD Publishing},
+	title = {A Broken Social Elevator? How to Promote Social Mobility},
+	year = 2018,
+	bdsk-url-1 = {https://doi.org/10.1787%2F9789264301085-en},
+	bdsk-url-2 = {https://doi.org/10.1787/9789264301085-en}}
 
 @incollection{kurz:2010,
 	author = {Heinz D. Kurz and Neri Salvadori},
