Add slides for climate lecture

--- a/data/lit/wipol_advanced.bib
+++ b/data/lit/wipol_advanced.bib
@@ -1,12 +1,83 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Matthias Schnetzer at 2023-05-06 20:44:44 +0200 
+%% Created for Matthias Schnetzer at 2023-06-07 00:01:50 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{meadows:1972,
+	author = {Dennis L. Meadows and Donella Meadows and J{\o}rgen Randers and William W. Behrens},
+	date-added = {2023-06-06 23:59:31 +0200},
+	date-modified = {2023-06-07 00:01:50 +0200},
+	publisher = {Universe Books, New York},
+	title = {The Limits to Growth},
+	year = {1972}}
+
+@techreport{chancel:2023,
+	author = {Lucas Chancel and Philipp Bothe and Tancr{\`e}de Voituriez},
+	date-added = {2023-06-06 22:19:06 +0200},
+	date-modified = {2023-06-06 22:21:14 +0200},
+	institution = {World Inequality Lab Study 2023/1},
+	title = {Climate Inequality Report},
+	year = {2023}}
+
+@article{ivanova:2020,
+	author = {Diana Ivanova and Richard Wood},
+	date-added = {2023-06-06 21:29:34 +0200},
+	date-modified = {2023-06-06 21:30:45 +0200},
+	doi = {10.1017/sus.2020.12},
+	journal = {Global Sustainability},
+	number = {e18},
+	pages = {1-12},
+	title = {The unequal distribution of household carbon footprints in Europe and its link to sustainability},
+	volume = {3},
+	year = 2020,
+	bdsk-url-1 = {https://doi.org/10.1017%2Fsus.2020.12},
+	bdsk-url-2 = {https://doi.org/10.1017/sus.2020.12}}
+
+@article{theine:2022,
+	author = {Hendrik Theine and Stefan Humer and Mathias Moser and Matthias Schnetzer},
+	date-added = {2023-06-06 21:28:02 +0200},
+	date-modified = {2023-06-06 21:28:14 +0200},
+	doi = {10.1016/j.ecolecon.2022.107435},
+	journal = {Ecological Economics},
+	pages = {107435},
+	title = {Emissions inequality: Disparities in income, expenditure, and the carbon footprint in Austria},
+	volume = {197},
+	year = 2022,
+	bdsk-url-1 = {https://doi.org/10.1016%2Fj.ecolecon.2022.107435},
+	bdsk-url-2 = {https://doi.org/10.1016/j.ecolecon.2022.107435}}
+
+@article{barros:2021,
+	author = {Beatriz Barros and Richard Wilk},
+	date-added = {2023-06-06 21:27:21 +0200},
+	date-modified = {2023-06-06 21:27:38 +0200},
+	doi = {10.1080/15487733.2021.1949847},
+	journal = {Sustainability: Science, Practice and Policy},
+	number = {1},
+	pages = {316--322},
+	title = {The outsized carbon footprints of the super-rich},
+	volume = {17},
+	year = 2021,
+	bdsk-url-1 = {https://doi.org/10.1080%2F15487733.2021.1949847},
+	bdsk-url-2 = {https://doi.org/10.1080/15487733.2021.1949847}}
+
+@article{ropke:2004,
+	author = {Inge R{\o}pke},
+	date-added = {2023-06-05 21:31:27 +0200},
+	date-modified = {2023-06-05 21:31:41 +0200},
+	doi = {10.1016/j.ecolecon.2004.02.012},
+	journal = {Ecological Economics},
+	number = {3-4},
+	pages = {293--314},
+	title = {The early history of modern ecological economics},
+	volume = {50},
+	year = 2004,
+	bdsk-url-1 = {https://doi.org/10.1016%2Fj.ecolecon.2004.02.012},
+	bdsk-url-2 = {https://doi.org/10.1016/j.ecolecon.2004.02.012}}
 
 @book{oecd:2018,
 	author = {{OECD}},
